# getIntoGameDev

Maze Board/: config.py
Multiplayer Pygame/: serverDemo.py  threadDemo.py
Multiplayer Pygame/stage 1/: client.py  server.py
Multiplayer Pygame/stage 2/: client.py  server.py
c tutorial/01 pointers/: pointers.c
opengl summer camp/stage 6 oop refactor/stage6.1 model classes/: main.cpp
opengl summer camp/stage 6 oop refactor/stage6.1 model classes/model/: cube.cpp  cube.h  player.h
opengl summer camp/stage 6 oop refactor/stage6.2 view classes/: config.h  main.cpp
opengl summer camp/stage 6 oop refactor/stage6.2 view classes/model/: cube.cpp  cube.h  player.cpp  player.h
opengl summer camp/stage 6 oop refactor/stage6.2 view classes/shaders/: textured3Dfragment.txt
opengl summer camp/stage 6 oop refactor/stage6.3 control class/: main.cpp
opengl summer camp/stage 7 level geometry/7.1 level editor and prototype/: editor.py  level2.txt
pygame/: level.txt  level2.txt  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py  stage6.py  stage7.py  stage8.py
pyopengl/01 - Window/: window.py
pyopengl/02 - Triangle/: triangle.py
pyopengl/02 - Triangle/shaders/: fragment.txt  vertex.txt
pyopengl/02 - triangle/startPoint/: window.py
pyopengl/03 - Textured/: textured_triangle.py
pyopengl/03 - Textured/alpha example/: alpha.py
pyopengl/03 - Textured/shaders/: fragment.txt  vertex.txt
pyopengl/03 - textures/finished/: textured_triangle.py
pyopengl/03 - textures/startPoint/: triangle.py
pyopengl/04 - Transformations/: spinningCube.py
pyopengl/04 - Transformations/shaders/: vertex.txt
pyopengl/04 - transformations/finished/: spinningCube.py
pyopengl/05 - FPS Camera/: fps_camera.py.py
pyopengl/05 - FPS Camera/shaders/: fragment.txt
pyopengl/05 - loading Obj Models/finished/: spinningCubeModel.py
pyopengl/05 - loading Obj Models/startPoint/: spinningCube.py
pyopengl/06 - Blinn Phong Lighting/temp/: blinnPhongStart.py
pyopengl/06 - Diffuse Lighting/: lighting.py
pyopengl/06 - Diffuse Lighting/shaders/: fragment.txt  simple_3d_fragment.txt
pyopengl/07 - Phong Lighting/: lighting.py
pyopengl/07 - Phong Lighting/shaders/: fragment.txt
pyopengl/08 - Improved Lighting/: lighting.py
pyopengl/09 - Model Loading/: models.py
pyopengl/10 - Static Animation/: models.py
pyopengl/11 - Third Person Camera/: fixed_camera.py  flying_camera.py  shoulder_camera.py
pyopengl/12 - Framebuffers/: framebuffer.py
pyopengl/13 - Menu/: menu_game.py  menu_game_text.py
pyopengl/14 - MultiSample Framebuffers/: antialiasing.py
pyopengl/15 - Bloom/: bloom.py
pyopengl/16 - Particles/: particles_2d.py
pyopengl/17 - Billboards and Smoke/: billboards_smoke.py
pyopengl/17 - Billboards and Smoke/shaders/: fragment_3d_billboard.txt
pyopengl/18 - Skybox/: skybox.py
pyopengl/19 - Shadows/: config.py
pyopengl/20 - Stencil Buffer/: config.py  script.docx
pyopengl/21 - instanced rendering/finished/: efficient_rendering.py
pyopengl/21 - instanced rendering/startPoint/: inefficient_rendering.py
pyopengl/22 - Blinn Phong Lighting/finished/: blinn_phong.py
pyopengl/22 - Blinn Phong Lighting/startPoint/: start.py
pyopengl/23 - normal mapping/: script.docx
pyopengl/23 - normal mapping/startPoint/: start.py
pyopengl/24 - deferred shading/: script.docx
pyopengl/24 - deferred shading/finished/: deferred-shading.py
pyopengl/24 - deferred shading/startPoint/: start.py
pyopengl/cpu framebuffer/: pixelBuffer.py  raycaster.py
pyopengl/flat raycaster/: flat_raycaster.py
pyopengl/flat raycaster/optimized/: flat_raycaster.py
pyopengl/raytracing/: raytracer.py  raytracer2.py
pyvulkan/: pyvulkan_stage1.py  pyvulkan_stage14.py  pyvulkan_stage16.py  pyvulkan_stage17.py  pyvulkan_stage2.py  pyvulkan_stage3.py  pyvulkan_stage4.py  pyvulkan_stage5.py  pyvulkan_stage6.py
pyvulkan/shaders/: compile.bat
vulkan/01 - introduction and setup/: baseCode.cpp
vulkan/01 - loading vulkan library/: CMakeLists.txt
vulkan/02 - instances/: instances.cpp
vulkan/02 - making vulkan instance/: CMakeLists.txt
vulkan/02 - making vulkan instance/Finished/: engine.cpp  instance.h
vulkan/03 - validation layers/: CMakeLists.txt  validationLayers.cpp
vulkan/04 - Physical Devices/: CMakeLists.txt
vulkan/04 - Physical Devices/Finished/: logging.h
vulkan/04 - physical device selection/: physicalDevicesQueueFamilies.cpp
vulkan/05 - logical device creation/: CMakeLists.txt  logicalDevices.cpp
vulkan/06 - window surface creation/: CMakeLists.txt  windowsSurface.cpp
vulkan/07 - swapchain creation/: CMakeLists.txt  swapchain.cpp
vulkan/08 - image views/: CMakeLists.txt
vulkan/09 - programmable pipeline stages/: CMakeLists.txt
vulkan/10 - fixed pipeline stages/: CMakeLists.txt  fixedPipeline.cpp
vulkan/11 - renderpass and full pipeline creation/: CMakeLists.txt  renderpass.cpp
vulkan/12 - framebuffers and command buffers/: CMakeLists.txt  framebuffers.cpp
vulkan/13 - Drawing with basic synchronisation/: CMakeLists.txt
vulkan/14 - Multithreaded Rendering/: CMakeLists.txt
vulkan/15 - Swapchain Recreation/: CMakeLists.txt
vulkan/16 - Vertex Buffer/: CMakeLists.txt
vulkan/17 - device-local memory/: CMakeLists.txt
vulkan/18 - uniform buffer objects/: CMakeLists.txt
vulkan/19 - textures/: CMakeLists.txt  textures.cpp
vulkan/20 - indexed drawing/: CMakeLists.txt  indexedDrawing.cpp
vulkan/21 - depth buffering/: CMakeLists.txt
vulkan/22 - obj models/: CMakeLists.txt
vulkan/23 - mipmaps/: CMakeLists.txt
vulkan/24 - multisampling/: CMakeLists.txt
vulkan/25 - multiple objects/: CMakeLists.txt
vulkan/26 - refactored/: CMakeLists.txt  vk_engine.cpp
vulkan/26 - refactored/view/: vk_mesh.cpp
vulkan/27 - deletion queue/: CMakeLists.txt  Makefile  vk_engine.cpp
vulkan/28 - push constants/: CMakeLists.txt  app.cpp  app.h  vk_engine.cpp
vulkan/28 - push constants/view/: vk_textures.cpp
vulkan/29 - multiple meshes/: CMakeLists.txt  vk_engine.cpp
web/01 - web scraping with python/: basicWebScraper.py
(+16 files in other folders)
